welcome.lessons.welcome.array.array667.Array667.scala.error
array667:26: error: type mismatch;
 found   : Unit
 required: Int
if(indexOfValue(nums,6)==(-1)){
^